Added  some authentication components
